Fix color contrast

--- a/desktop_version.css
+++ b/desktop_version.css
@@ -418,7 +418,7 @@
   }
 
   .contact-me-text {
-    font-weight: 400;
+    font-weight: 500;
     font-size: 20px;
     line-height: 28px;
     text-align: center;
